# generative-modeling

./: README.md  pyproject.toml  vscodesetup.ipynb
gan_steerability/: README.md
gan_steerability-master/graphs/stylegan/: graph_util.py
gan_steerability-master/resources/: download_resources.sh
gan_steerability/graphs/biggan/: transform_base.py
notebooks/: GAN_steerability_tutorial_biggan_deep.ipynb  Score_SDE_demo_PyTorch.ipynb  Tutorial_on_Score_Based_Generative_Modeling_(PyTorch).ipynb
notebooks/pytorch/: 1_Pytorch_Introduction.ipynb  2-Pytorch-Autograd.ipynb  3-Pytorch-Optimizers.ipynb  4_Pytorch_Modules.ipynb  5_Pytorch_Dataloader.ipynb
